--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,10 @@
+.game-img{
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0V99T1f1kAjw71whLQ_dDopfryCJHeYiPXw&usqp=CAU);
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .bg-img{
     background-image: url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v546batch3-mynt-34-badgewatercolor_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=89288ef4b47127f7f34a5998b50e4470);
 
